# finegrained-app

./: .dockerignore  .gitignore  Backend.dockerfile  Frontend.dockerfile  Makefile  README.md  Triton.dockerfile  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
backend/app/: routes.py  scheme.py
backend/tests/: test_client.py  test_mlflow.py  test_model_deployment.py  test_triton.py
backend/utils/: image_utils.py  model_deployment.py  pipelines.py  similarity.py  tracking.py  triton.py
frontend/: Dockerfile  app.py  client.py  gradio_app.py  home.py  requirements.txt
frontend/pages/: 10_data_upload.py  15_model_registry.py  1_object_detection.py  2_image_classification.py  3_object_recognition.py  4_text_matching.py
frontend/utils/: client.py  image.py  st.py
src/backend/: image_utils.py  routes.py  similarity.py  triton.py
src/backend/tests/: test_client.py
