[tool.poetry]
name = "finegrained-app"
version = "0.1.0"
description = "Model inference server with a simple frontend"
authors = ["Rustem Galiullin <rustem.galiullin@bayanat.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "finegrained_app"}]

[tool.poetry.dependencies]
python = "^3.10"
faiss-cpu = "1.7.2"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
tritonclient = {extras = ["grpc"], version = "^2.32.0"}
pydantic = "^1.10.7"
pillow = "^9.5.0"
numpy = "^1.24.2"
mlflow-skinny = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"


[tool.poetry.group.frontend.dependencies]
streamlit = "^1.20.0"
pandas = "<2"
numpy = "^1.24.2"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
